force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Sector__c/Plant_Sector__c.object-meta.xml
<CustomObject>
    <label>Target Generation Config</label>
    <nameField>
        <displayFormat>PLS-{000000}</displayFormat>
        <label>Plant Sector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Generation Configs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>