force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Sector__c/fields/Auth_Region__c.field-meta.xml
<CustomField>
    <fullName>Auth_Region__c</fullName>
    <description>Auth region for Target Generation Config. This is taken from plant.</description>
    <inlineHelpText>Auth region for Target Generation Config. This is taken from plant.</inlineHelpText>
    <label>Auth Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GWB_Region</valueSetName>
    </valueSet>
</CustomField>