force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Sector__c/fields/Auth_Sector__c.field-meta.xml
<CustomField>
    <fullName>Auth_Sector__c</fullName>
    <formula>TEXT( Plant__r.Auth_Sector__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector</label>
    <type>Text</type>
</CustomField>