force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Sector__c/fields/CO_Plant_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>CO_Plant_Program_Name__c</fullName>
    <label>CO Plant Program Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>