force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Sector__c/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <label>Functional Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Area</valueSetName>
    </valueSet>
</CustomField>