force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Sector__c/fields/Plant_Program__c.field-meta.xml
<CustomField>
    <fullName>Plant_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Program</label>
    <referenceTo>Plant_Program__c</referenceTo>
    <relationshipLabel>Plant Sectors</relationshipLabel>
    <relationshipName>Plant_Sectors</relationshipName>
    <type>Lookup</type>
</CustomField>