force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Sector__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT(Plant__r.Auth_Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>