force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Sector__c/validationRules/Restrict_Plant_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Plant_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Setup.GWB_Switch__c.Bypass_VRs__c),
    NOT(ISNEW()),
    ISCHANGED(Plant__c),
    OR(
        $Permission.Central_Admin,
        $Permission.Regional_Admin
    )
)</errorConditionFormula>
    <errorMessage>Plant value cannot be updated.</errorMessage>
</ValidationRule>