force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Sector__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Sector__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>